# easynmc-cmake-example

./: .gitmodules  README.md
linux/: CMakeLists.txt  README.md  example.c
linux/cmake/: PkgConfigSetup.cmake  cross-compile.cmake
nmc/: CMakeLists.txt  main.c
nmc/cmake/: NeuromatrixToolchain.cmake
nmc/cmake/Platform/: Generic-nmcpp.cmake  NMC.cmake
