
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
include(NeuromatrixToolchain)
NMC_TARGET(soc)

PROJECT(easynmc-example-project C)
SET(PROJECT_VERSION   0.1)

SET(SRCS main.c)

INCLUDE_DIRECTORIES(
  ${EASYNMC_INCLUDE_DIRS}
)

ADD_EXECUTABLE(easynmc-example ${SRCS})
